restuled the button

--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
 		</ul>
 	</nav>
 	<header role="banner">
-		<button onclick="makeItBad()" class="retroBtn"><i class="fa fa-4x fa-bomb" aria-hidden="true"> You won't click this button </i></button>
+		<button onclick="makeItBad()" class="retroBtn" id="badSkinBtn">
+			<!-- <i class="fa fa-4x fa-bomb" aria-hidden="true"></i> -->
+			You won't click this button 
+		</button>
 	</header>
 	<main role="main">
 		<section id="projects-FQ" class="project">
