changed linkedin url

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		
 		<ul class="nav-links" id="nav-links">
 			<li class="link"><a class="nav-live-link nav-link-github" href="https://github.com/complicationlamp" >GitHub</a></li>
-			<li class="link"><a class="nav-live-link nav-link-linkedin" href="https://www.linkedin.com/in/kyle-looker-12267323/">Linkedin</a></li>
+			<li class="link"><a class="nav-live-link nav-link-linkedin" href="https://www.linkedin.com/in/kylelooker/">Linkedin</a></li>
 			<li class="link"><a class="nav-live-link nav-link-github" href="/photos/kyleLookreddyResume.pdf" >Resume</a></li>
 			<li class="link"><a class="nav-live-link nav-link-projects" href="#about-me">About Me</a></li>
 		</ul>
